objects/Invoice_Line_Item__c/Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Invoice Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>