objects/Invoice_Line_Item__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <inlineHelpText>Daily service amount</inlineHelpText>
    <label>Amount (Services)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>