objects/Invoice_Line_Item__c/fields/Amount_mileage__c.field-meta.xml
<CustomField>
    <fullName>Amount_mileage__c</fullName>
    <formula>Distance_Travelled__c  *  Cost_per_mile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (mileage)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>