objects/Invoice_Line_Item__c/fields/Cost_per_mile__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_mile__c</fullName>
    <description>The cost per mile for your journey (leave as 0 if other expense)</description>
    <inlineHelpText>The cost per mile for your journey (leave blank if other expense)</inlineHelpText>
    <label>Cost per mile</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>