objects/Invoice_Line_Item__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <label>Course Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADX201 - Admin Essentials for new Admins</fullName>
            </value>
            <value>
                <fullName>ADX211 - Admin Essentials for Experienced Admins</fullName>
            </value>
            <value>
                <fullName>DEX403 - Declarative Development for Platform App Builders</fullName>
            </value>
            <value>
                <fullName>ADX231 - Introduction to Apex &amp; Object Orientated Programming</fullName>
            </value>
            <value>
                <fullName>DEX450 - Programmatic Development with Apex &amp; Visualforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>