objects/Invoice_Line_Item__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of service</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>