objects/Invoice_Line_Item__c/fields/Distance_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled__c</fullName>
    <description>Distance Travelled in miles (leave as 0 if other expense)</description>
    <inlineHelpText>Distance Travelled in miles (leave blank if other expense)</inlineHelpText>
    <label>Distance Travelled (Miles)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>