objects/Invoice_Line_Item__c/recordTypes/Accommodation.recordType-meta.xml
<RecordType>
    <fullName>Accommodation</fullName>
    <active>true</active>
    <label>Accommodation</label>
</RecordType>