objects/Invoice_Line_Item__c/recordTypes/Airfare.recordType-meta.xml
<RecordType>
    <fullName>Airfare</fullName>
    <active>true</active>
    <label>Airfare</label>
</RecordType>