objects/Invoice_Line_Item__c/recordTypes/Car_Hire.recordType-meta.xml
<RecordType>
    <fullName>Car_Hire</fullName>
    <active>true</active>
    <label>Car Hire</label>
</RecordType>