objects/Invoice_Line_Item__c/recordTypes/Parking.recordType-meta.xml
<RecordType>
    <fullName>Parking</fullName>
    <active>true</active>
    <label>Parking</label>
</RecordType>