objects/Invoice_Line_Item__c/recordTypes/Phone.recordType-meta.xml
<RecordType>
    <fullName>Phone</fullName>
    <active>true</active>
    <label>Phone</label>
</RecordType>