objects/Invoice_Line_Item__c/recordTypes/Services.recordType-meta.xml
<RecordType>
    <fullName>Services</fullName>
    <active>true</active>
    <description>Used to create a service expense</description>
    <label>Services</label>
</RecordType>