objects/Invoice_Line_Item__c/recordTypes/Subsistence.recordType-meta.xml
<RecordType>
    <fullName>Subsistence</fullName>
    <active>true</active>
    <label>Subsistence</label>
</RecordType>