objects/Invoice_Line_Item__c/recordTypes/Taxi.recordType-meta.xml
<RecordType>
    <fullName>Taxi</fullName>
    <active>true</active>
    <label>Taxi</label>
</RecordType>