objects/Invoice_Line_Item__c/recordTypes/Tolls.recordType-meta.xml
<RecordType>
    <fullName>Tolls</fullName>
    <active>true</active>
    <label>Tolls</label>
</RecordType>