objects/Invoice_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Amount_mileage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>